# honeybee_cell_segmentation_pipeline

./: .gitignore  LICENSE  README.md
annotator/: README.md  install.sh  pyproject.toml
annotator/annotation_tool/: annotation_controller.py  annotation_model.py  annotation_viewer.py  data_loader.py  label_map.json  utils.py
annotator/cell_finder/: cell_finder.py  hex_graph_builder.py  models.py  utils.py
annotator/cell_finder/performance_validation/: performance_validation.py
annotator/cell_finder/performance_validation/ground_truth/: 20240603_cam-2.json  20240613_cam-1.json  20240615_cam-3.json  20240722_cam-0.json
annotator/data/: label_classes.json
annotator/mask_writer/: mask_writer.py  utils.py
background_img_generator/: README.md  main.py  pyproject.toml
background_img_generator/cell_segmentor/honeybee_comb_inferer/inference/: HoneyBeeCombInferer.py  __init__.py
background_img_generator/frame_extractor/: frame_extractor.py  global_video_processor.py  utils.py
background_img_generator/frame_extractor/test/: test_frame_extractor.py
background_img_generator/image_generator/: background_img_generator.py  utils.py
