[project]
name = "annotator"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Sturm",email = "d.sturm@fu-berlin.de"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "napari (>=0.6.2,<0.7.0)",
    "pyside6 (>=6.9.1,<7.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "annotation_tool" },
    { include = "cell_finder" },
    { include = "mask_writer" }
]
[project.scripts]
annotator = "annotation_tool.annotation_controller:main"
cell-finder = "cell_finder.cell_finder:main"
mask-writer = "mask_writer.mask_writer:main"
performance-validation = "cell_finder.performance_validation.performance_validation:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
