[project]
name = "background-img-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Sturm",email = "daniel.sturm@fu-berlin.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations (>=2.0.8,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "monai (>=1.5.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "segmentation-models-pytorch (>=0.5.0,<0.6.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "cupy-cuda12x (>=13.4.1,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.4"
ipykernel = "^6.29.5"


[tool.poetry]
package-mode = false